--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,13 @@
 /******************\
 |*** Start body ***|
 \******************/
-a{
+a {
     text-decoration: none;
 }
 
 body {
-    position: relative;
-    height: 100%;
+    margin: 0;
+    font-family: poppins, sans-serif;
 }
 
 body {
@@ -29,7 +29,7 @@ body {
 .swiper {
     width: 80%;
     height: 457px;
-    padding-top: 90px;
+    padding-top: 10px;
 }
 
 .swiper-slide {
@@ -68,38 +68,39 @@ body {
 |** Start navbar **|
 \******************/
 
-nav {
-    background: linear-gradient(89.9deg, #FFFFFF 0.53%, #00F0FF 99.92%);
-    height: 64px;
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+.topnav {
+    overflow: hidden;
+    background: linear-gradient(320.4deg, #00F0FF 0%, #FFFFFF 97.85%);
     display: flex;
     justify-content: space-between;
-    position: fixed;
-    z-index: 1000;
-    width: 100%;
-
 }
 
-nav .logo img {
-    margin: 10px;
-    width: 100px;
-}
-
-nav .ul {
+.topnav .topnav_items,
+.topnav .topnav_logo {
     display: flex;
-    align-items: center;
-    margin: 10px;
-    gap: 30px;
 }
 
-nav .ul a {
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 700;
+
+.topnav a {
+    float: right;
+    display: block;
+    color: #000000;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
     font-size: 17px;
 }
 
-/*end style li de nav */
+.topnav a.active {
+    background: transparent;
+    color: rgb(0, 0, 0);
+    float: left;
+}
+
+.topnav .icon {
+    display: none;
+}
+
 
 /******************\
 |*** End navbar ***|
@@ -119,22 +120,25 @@ nav .ul a {
     height: 67%;
     width: 31%;
 }
+
 .slideee .img_slied img {
     border-radius: 53px;
 }
-.slideee .desc_slied{
+
+.slideee .desc_slied {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     margin-left: -29%;
 }
-.slideee .desc_slied .title_desc h2{
+
+.slideee .desc_slied .title_desc h2 {
     color: #FE8E40;
     margin-left: 50%;
     text-align: start;
 }
 
-.slideee .desc_slied .desc_desc{
+.slideee .desc_slied .desc_desc {
     text-align: start;
     margin-top: -53PX;
 }
@@ -147,72 +151,86 @@ nav .ul a {
 |** Start footer **|
 \******************/
 
-    footer{
-        margin-top: 10px;
-        background-color: #002A30;
-        height: 100%;
-        padding-bottom: 10px;
-        display: flex;
-        flex-wrap: wrap;
-        flex-direction: column;
-    }
+footer {
+    margin-top: 10px;
+    background-color: #002A30;
+    height: 100%;
+    padding-bottom: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
 
-    .logo_footer{
-        display: flex;
-        justify-content: center;
-    }
-    .logo_footer img{
-        margin: 20px 0px;
-        width: 180px;
-    }
+.logo_footer {
+    display: flex;
+    justify-content: center;
+}
 
-    .grid_footer {
-        display: grid;
-        grid-template-columns: repeat(4, 213px);
-        grid-gap: 10px;
-        justify-content: space-evenly;
-        font-family: 'Poppins';
-        font-style: normal;
-        font-weight: 700;
-    }
-    .grid_footer .grid_items .title_grid_items{
-        color: #FFFFFF;
-        font-size: 20px;
-    }
-    .grid_footer .grid_items .desc_grid_items{
-        color: #22B2B8;
-        font-size: 16px;
-    }
+.logo_footer img {
+    margin: 20px 0px;
+    width: 180px;
+}
 
-    .desc_grid_items{
-        display: flex;
-        
-    }
-    .desc_grid_items .logo_apk img{
-        border-radius: 15px;
-        width: 65px;
-    }
-    .desc_grid_items .stors img{
-        border-radius: 5px;
-        width: 96px;
-        margin: -2px 10px;
-        margin-top: 1px;
-    }
-    .desc_grid_items .reseaux{
-        background-color: #FFFFFF;
-        border-radius: 100%;
-        width: 25px;
-        margin-left: 7px;
-    }
-    .desc_grid_items .reseaux i {
-        padding-left: 5px;
-    }
-    i.fa.fa-facebook.fb {
-        padding-left: 7px;
-    }
-    a:-webkit-any-link  {
-        color: black;
-    }
+.grid_footer {
+    justify-content: space-around;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 700;
+}
+
+.grid_footer .grid_items .title_grid_items {
+    color: #FFFFFF;
+    font-size: 20px;
+}
+
+.grid_footer .grid_items .desc_grid_items {
+    color: #22B2B8;
+    font-size: 16px;
+}
+
+.desc_grid_items {
+    display: flex;
+
+}
+
+.desc_grid_items .logo_apk img {
+    border-radius: 15px;
+    width: 65px;
+}
+
+.desc_grid_items .stors img {
+    border-radius: 5px;
+    width: 96px;
+    margin: -2px 10px;
+    margin-top: 1px;
+}
+
+.desc_grid_items .reseaux {
+    background-color: #FFFFFF;
+    border-radius: 100%;
+    width: 25px;
+    margin-left: 7px;
+}
+
+.desc_grid_items .reseaux i {
+    padding-left: 5px;
+}
+
+i.fa.fa-facebook.fb {
+    padding-left: 7px;
+}
+
+a:-webkit-any-link {
+    color: black;
+}
+
+.stors {
+    display: flex;
+    flex-direction: column;
+}
 
 /******************\
 |*** End footer ***|
@@ -221,18 +239,22 @@ nav .ul a {
 /******************\
 |** Start aboutH **|
 \******************/
-.about_nous{
+.about_nous {
     margin: 20px 10.5%;
     font-family: 'Poppins';
     font-style: normal;
 }
-.title_about_nous{/* et pour les platsH */
+
+.title_about_nous {
+    /* et pour les platsH */
     font-size: 16px;
     color: #FE8E40;
 }
-.about_nous .desc_about_nous{
+
+.about_nous .desc_about_nous {
     font-size: 15px;
 }
+
 /******************\
 |*** End aboutH ***|
 \******************/
@@ -242,15 +264,17 @@ nav .ul a {
 |** Start playsH **|
 \******************/
 
-.platsH{
+.platsH {
     margin: 0 10.5%;
     font-family: 'Poppins';
     font-style: normal;
 }
-.platsHH{
-    margin-left: 85px;
+
+.platsHH {
+    margin-left: 50px;
 }
-.platsHH .platH{
+
+.platsHH .platH {
     display: flex;
     margin-bottom: 10px;
     width: 100%;
@@ -259,20 +283,26 @@ nav .ul a {
     justify-content: space-evenly;
     box-shadow: 4px 4px 4px 4px #00000033;
     border-radius: 15px;
+    padding: 15px;
 }
-.platsHH .platH .img_platH{
-    width: 479px;
+
+.platsHH .platH .img_platH {
+    width: 450px;
     height: 328px;
 }
-.platsHH .platH .img_platH img{
-    width: 90%;
+
+.platsHH .platH .img_platH img {
+    width: 100%;
     height: 90%;
     border-radius: 15px;
     margin: 17px 0;
 }
-.platsHH .platH .disc_platH{
-    width: 40%;
+
+.platsHH .platH .disc_platH {
+    width: auto;
+    margin-left: 30px;
 }
+
 /******************\
 |*** End platsH ***|
 \******************/
@@ -281,95 +311,122 @@ nav .ul a {
 |*** Start card ***|
 \******************/
 
-    .gride_card {
-        display: grid;
-        grid-template-columns: repeat(4, 280px);
-        margin: 20px 10%;
-        gap: 30px;
-    }
+.gride_card {
+    margin: 20px 10%;
+    justify-content: space-around;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+}
 
-    .gride_card .card {
-        background-color:#00f0ffa8;
-        padding: 15px;
-        border-radius: 20px;
-        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-    }
-    .gride_card .card .title_card{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-    }
-    .gride_card .card .title_card .img_card{
-        height: 153.5px;
-        width: 250px;
-    }
-    .gride_card .card .title_card .img_card img{
-        width: 153.5px;
-        height: 100%;
-        border-radius: 15px;
-    }
-    .gride_card .card .title_card .titre_card{
-        font-size: 15px;
-        width: 150px;
-        color: #FBD300;
-        line-height: 23px;
-        -webkit-text-stroke-color: #ffffff;
-        -webkit-text-stroke-width: 1px;
-        position: absolute;
-        top: 25%;
-        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-    }
-    .gride_card .card .body_card{
-        display: flex;
-        align-items: center;
-        margin-top: 10px;
-    }
-    .gride_card .card .body_card .desc_card{
-        background-color: #72f7ff;
-        text-align: center;
-        width: 140.13px;
-        font-family: 'Poppins';
-        font-style: normal;
-        font-size: 8px;
-        line-height: 10px;
-        height: 109px;
-        padding: 5px;
-        display: flex;
-        align-items: center;
-    }
-    .gride_card .card .body_card .btn_card{
-        display: flex;
-        flex-direction: column;
-        margin-left: 22px;
-    }
-    .gride_card .card .body_card .btn_card button{
-        width: 100px;
-        cursor: pointer;
-        font-family: 'Poppins';
-        font-style: normal;
-        font-size: 8px;
-        line-height: 12px;
-        color: #00F0FF;
-        height: 25px;
-        background: linear-gradient(180deg, #FF9595 0%, #FB0000 100%);
-        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px -4px 4px rgba(0, 0, 0, 0.25);
-        border-radius: 15px;
-        margin-bottom: 3px;
-    }
-    .gride_card .card .body_card .btn_card button i{
-        color: #ffffff;
-        font-size: 10px;
-    }
-    .pop_panier{
-        width: 70px;
-        position: fixed;
-        left: 95%;
-        z-index: 1000;
-    }
-    .pop_panier img{
-        width: 100%;
-    }
+.gride_card .card {
+    background-color: #00f0ffa8;
+    padding: 15px;
+    border-radius: 20px;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+
+.gride_card .card .title_card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.gride_card .card .title_card .img_card {
+    height: 153.5px;
+    width: 250px;
+}
+
+.gride_card .card .title_card .img_card img {
+    width: 153.5px;
+    height: 100%;
+    border-radius: 15px;
+}
+
+.gride_card .card .title_card .titre_card {
+    font-size: 15px;
+    width: 150px;
+    color: #FBD300;
+    line-height: 23px;
+    -webkit-text-stroke-color: #ffffff;
+    -webkit-text-stroke-width: 1px;
+    position: absolute;
+    top: 25%;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+
+.gride_card .card .body_card {
+    display: flex;
+    align-items: center;
+    margin-top: 10px;
+}
+
+.gride_card .card .body_card .desc_card {
+    background-color: #72f7ff;
+    text-align: center;
+    width: 140.13px;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-size: 8px;
+    line-height: 10px;
+    height: 109px;
+    padding: 5px;
+    display: flex;
+    align-items: center;
+}
+
+.gride_card .card .body_card .btn_card {
+    display: flex;
+    flex-direction: column;
+    margin-left: 22px;
+}
+
+.gride_card .card .body_card .btn_card button {
+    width: 100px;
+    cursor: pointer;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-size: 8px;
+    line-height: 12px;
+    color: #00F0FF;
+    height: 25px;
+    background: linear-gradient(180deg, #FF9595 0%, #FB0000 100%);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px -4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 15px;
+    margin-bottom: 3px;
+}
+
+.gride_card .card .body_card .btn_card button i {
+    color: #ffffff;
+    font-size: 10px;
+}
+
+.pop_panier {
+    width: 70px;
+    position: fixed;
+    left: 95%;
+    z-index: 1000;
+}
+
+.pop_panier img {
+    width: 100%;
+}
+
+.select_items {
+    display: flex;
+    justify-content: center;
+    height: 40px;
+    margin-top: 20px;
+}
+select{
+    border-radius: 25px;
+    border: none;
+    background: #00ebfa;
+    color: #000000a6;
+    text-align: center;
+}
+
 /******************\
 |**** End card ****|
 \******************/
@@ -378,7 +435,7 @@ nav .ul a {
 |** Start  about **|
 \******************/
 
-.about{
+.about {
     width: 70%;
     padding: 10px 15%;
     display: flex;
@@ -386,19 +443,21 @@ nav .ul a {
     align-items: center;
 }
 
-.about .desc_about{
+.about .desc_about {
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 600;
     line-height: 30px;
     color: #000000;
-    width: 40%;
+    width: auto;
 }
 
-.about .desc_about .title_about{
+.about .desc_about .title_about {
     color: #FE8E40;
+    width: auto;
 }
-.about .img_about{
+
+.about .img_about {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -406,8 +465,9 @@ nav .ul a {
     height: 350.93px;
     border-radius: 62px;
 }
-.about .img_about img{
-    width: 70%;
+
+.about .img_about img {
+    width: auto;
     height: 70%;
     border-radius: 30px;
 }
@@ -420,29 +480,31 @@ nav .ul a {
 |* Start  contact *|
 \******************/
 
-.contact{
-    padding: 80px 0 0;
+.contact {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
-.contact .formulaire{
+
+.contact .formulaire {
     display: flex;
     align-items: center;
     gap: 50px;
 }
-.contact .titre_contact{
+
+.contact .titre_contact {
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 900;
     font-size: 30px;
     text-align: center;
     color: #FE8E40;
-    
+
     -webkit-text-stroke-color: #000000;
     -webkit-text-stroke-width: 1px;
 }
+
 .contact .formulaire .image_formulaire {
     width: 380px;
     height: 400px;
@@ -452,33 +514,38 @@ nav .ul a {
     border-radius: 30px;
 }
 
-.contact .formulaire .form{
+.contact .formulaire .form {
     display: flex;
     flex-direction: column;
     gap: 10px;
     width: 50%;
-} 
+}
+
 .contact .formulaire .form input,
-.contact .formulaire .form textarea{
+.contact .formulaire .form textarea {
     border: 3px solid #000000;
     border-radius: 10px;
     background-color: transparent;
 }
+
 .contact .formulaire .form input {
     height: 50px;
 }
-.contact .formulaire .form textarea{
+
+.contact .formulaire .form textarea {
     resize: none;
     height: 126px;
 }
-.contact .formulaire .form .submit{
+
+.contact .formulaire .form .submit {
     background: linear-gradient(180deg, #FF9595 0%, #FB0000 100%);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px -4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 15px;
     width: 50%;
     height: 36px;
-    margin : 0 25%;
+    margin: 0 25%;
 }
+
 /******************\
 |** End  contact **|
 \******************/
@@ -487,8 +554,286 @@ nav .ul a {
 /******************\
 |** Start  achat **|
 \******************/
-.tableau_achat{
-    padding: 80px 25%;
+
+
+.band-name {
+    text-align: center;
+    margin: 0;
+    font-size: 4em;
+    font-family: "poppins";
+    font-weight: normal;
+    color: white;
+}
+
+.band-name-large {
+    font-size: 8em;
+}
+
+.content-section {
+    margin: 1em;
+}
+
+.container {
+    max-width: 900px;
+    margin: 0 auto;
+    padding: 0 1.5em;
+}
+.section-header {
+    font-family: "Metal Mania";
+    font-weight: normal;
+    color: #333;
+    text-align: center;
+    font-size: 2.5em;
+}
+
+.about-band-image {
+    float: left;
+    height: 200px;
+    width: 200px;
+    margin: 15px;
+    border-radius: 50%;
+}
+
+.main-footer {
+    background-color: #56CCF2;
+    color: white;
+    padding: .25em 0;
+}
+
+.main-footer-container {
+    display: flex;
+    align-items: center;
+}
+
+.main-footer-container ul {
+    flex-grow: 1;
+    text-align: end;
+}
+
+.footer-nav li {
+    padding: 0 .5em;
+}
+
+.footer-nav img {
+    width: 30px;
+    height: 30px;
+}
+
+.btn {
+    text-align: center;
+    vertical-align: middle;
+    padding: .67em .67em;
+    cursor: pointer;
+}
+
+.btn-header {
+    margin: .5em 15% 2em 15%;
+    color: white;
+    border: 2px solid #2D9CDB;
+    background-color: rgba(255, 255, 255, .1);
+    border-radius: 0;
+    font-size: 1.5em;
+    font-weight: lighter;
+    padding-left: 2em;
+    padding-right: 2em;
+}
+
+.btn-header:hover {
+    background-color: rgba(255, 255, 255, .3);
+}
+
+.btn-play {
+    display: block;
+    margin: 0 auto;
+    color: #2D9CDB;
+    font-size: 4em;
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    padding: 0;
+    text-align: center;
+}
+
+.btn-primary {
+    color: white;
+    background-color: #56CCF2;
+    border: none;
+    border-radius: .3em;
+    font-weight: bold;
+}
+
+.btn-primary:hover {
+    background-color: #2D9CDB;
+}
+
+.tour-row {
+    border-bottom: 1px solid black;
+    padding-bottom: 1em;
+    margin-bottom: 1em;
+}
+
+.tour-row:last-child {
+    border: none;
+}
+
+.tour-item {
+    display: inline-block;
+    padding-right: .5em;
+}
+
+.tour-date {
+    color: #555;
+    width: 11%;
+    font-weight: bold;
+}
+
+.tour-city {
+    width: 24%;
+}
+
+.tour-arena {
+    width: 42%;
+}
+
+.tour-btn {
+    max-width: 19%;
+}
+
+.shop-item {
+    margin: 30px;
+}
+
+.shop-item-title {
+    display: block;
+    width: 100%;
+    text-align: center;
+    font-weight: bold;
+    font-size: 1.5em;
+    color: #333;
+    margin-bottom: 15px;
+}
+
+.shop-item-image {
+    height: 250px;
+}
+
+.shop-item-details {
+    display: flex;
+    align-items: center;
+    padding: 5px;
+}
+
+.shop-item-price {
+    flex-grow: 1;
+    color: #333;
+}
+
+.shop-items {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.cart-header {
+    font-weight: bold;
+    font-size: 1.25em;
+    color: #333;
+}
+
+.cart-column {
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid black;
+    margin-right: 1.5em;
+    padding-bottom: 10px;
+    margin-top: 10px;
+}
+
+.cart-row {
+    display: flex;
+}
+
+.cart-item {
+    width: 45%;
+}
+
+.cart-price {
+    width: 20%;
+    font-size: 1.2em;
+    color: #333;
+}
+
+.cart-quantity {
+    width: 35%;
+}
+
+.cart-item-title {
+    color: #333;
+    margin-left: .5em;
+    font-size: 1.2em;
+}
+
+.cart-item-image {
+    width: 75px;
+    height: auto;
+    border-radius: 10px;
+}
+
+.btn-danger {
+    color: white;
+    background-color: #EB5757;
+    border: none;
+    border-radius: .3em;
+    font-weight: bold;
+}
+
+.btn-danger:hover {
+    background-color: #CC4C4C;
+}
+
+.cart-quantity-input {
+    height: 34px;
+    width: 50px;
+    border-radius: 5px;
+    border: 1px solid #56CCF2;
+    background-color: #eee;
+    color: #333;
+    padding: 0;
+    text-align: center;
+    font-size: 1.2em;
+    margin-right: 25px;
+}
+
+.cart-row:last-child {
+    border-bottom: 1px solid black;
+}
+
+.cart-row:last-child .cart-column {
+    border: none;
+}
+
+.cart-total {
+    text-align: end;
+    margin-top: 10px;
+    margin-right: 10px;
+}
+
+.cart-total-title {
+    font-weight: bold;
+    font-size: 1.5em;
+    color: black;
+    margin-right: 20px;
+}
+
+.cart-total-price {
+    color: #333;
+    font-size: 1.1em;
+}
+
+.btn-purchase {
+    display: block;
+    margin: 40px auto 80px auto;
+    font-size: 1.75em;
 }
 /******************\
 |*** End  achat ***|
